tera/src/snapshot_tests/snapshots/tera__snapshot_tests__parser__parser_errors@component_args_missing_comma.txt.snap
---
source: tera/src/snapshot_tests/parser.rs
expression: res.unwrap_err()
input_file: tera/src/snapshot_tests/parser_inputs/errors/component_args_missing_comma.txt
---
error: Found identifier but expected ,.
 --> component_args_missing_comma.txt:1:25
  |
1 | {% component card(title body) %}{% endcomponent %}
  |                         ^^^^
